Fix 2) Column description crops text when too long.

--- a/src/components/incidents/incidents.scss
+++ b/src/components/incidents/incidents.scss
@@ -36,6 +36,7 @@
             .head, .panel {
                 flex: 1;
                 padding: 15px 18px;
+                max-width:100%;
 
                 .col {
                     font-size: 14px;
